# car_mileage_log_flask

./: .env.sample  Makefile  logic_rules.md  main.py  pyproject.toml  railway.json
src/car_mileage_log_flask/: app.py  domain.py
src/car_mileage_log_flask/blueprints/: auth.py
src/car_mileage_log_flask/commands/: __init__.py  create_job_site.py  edit_job_site.py
src/car_mileage_log_flask/db/: connection.py  exploration.ipynb  models.py  reads.py  tables.py  writes.py
src/car_mileage_log_flask/queries/: __init__.py  get_all_job_sites.py
src/car_mileage_log_flask/templates/: _navigation.html  base.html  end_drive.html  home.html  start-drive.html
src/car_mileage_log_flask/templates/auth/: login.html
src/car_mileage_log_flask/templates/drive_logs/: delete.html  edit.html  index.html  new.html
src/car_mileage_log_flask/templates/job_sites/: confirm_delete.html  details.html  edit.html  index.html  new.html
